[gd_scene load_steps=2 format=3 uid="uid://b0vkcjxbjlnqp"]

[ext_resource type="Script" path="res://script/transition_area.gd" id="1_jde00"]

[node name="LevelTransition" type="Node2D"]
script = ExtResource("1_jde00")
new_scene_path = "res://scene/level/transition_test2.tscn"

[node name="BeginTransition" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeginTransition"]
debug_color = Color(0.837494, 0.356763, 0.397002, 0.42)

[node name="InstantiateTransition" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InstantiateTransition"]
position = Vector2(-69, 0)
debug_color = Color(0.695905, 0.258131, 0.300562, 0.419608)

[node name="EndTransition" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndTransition"]
position = Vector2(-129, -11)
debug_color = Color(0.439192, 0.142777, 0.174302, 0.419608)

[connection signal="body_entered" from="BeginTransition" to="." method="_on_begin_transition_body_entered" flags=6]
[connection signal="body_entered" from="InstantiateTransition" to="." method="_on_instantiate_transition_body_entered" flags=7]
[connection signal="body_entered" from="EndTransition" to="." method="_on_end_transition_body_entered" flags=7]
